# hedging-pipeline-hw

./: .gitignore  ASSUMPTIONS.md  DESIGN.md  IMPROVEMENTS.md  README.md  candidate_assignment.md  logging.ini  nasdaq_events.xlsx  pyproject.toml  requirements.txt  run_pipeline.py  visualize.py
.github/workflows/: ci.yml
data/: daily_bars.parquet
notebooks/: data_research.ipynb
src/hedging_pipeline/: __init__.py  classification.py  cli.py  config.py  enrichment.py  loaders.py  logging_config.py  pipeline.py  summary.py
tests/: __init__.py  conftest.py  test_benchmarks.py  test_classification.py  test_enrichment.py  test_fuzz.py  test_loaders.py  test_logging_config.py  test_pipeline_integration.py  test_summary.py
