[project]
name = "hedging-pipeline"
version = "0.1.0"
description = "NASDAQ-100 rebalancing event pipeline: load, classify, enrich, summarize."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "pyarrow>=14.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
]
viz = [
    "matplotlib>=3.7.0",
]
notebook = [
    "jupyter>=1.0.0",
]

[project.scripts]
run-pipeline = "hedging_pipeline.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hedging_pipeline"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.0",
    "jupyter>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "benchmark: run performance benchmarks (pytest -m benchmark); exclude with -m 'not benchmark'",
]

# -----------------------------------------------------------------------------
# Coverage (pytest-cov)
# -----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/hedging_pipeline"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
]
fail_under = 80

# -----------------------------------------------------------------------------
# Ruff (lint + format)
# -----------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

# -----------------------------------------------------------------------------
# Pyright (type checking)
# -----------------------------------------------------------------------------
[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "standard"
reportMissingImports = true
reportMissingTypeStubs = false
extraPaths = ["src"]
# Use "standard" for stricter checks; pandas/ndarray need type narrows or stubs
